--- a/Reports/Spark/ExtentSpark.html
+++ b/Reports/Spark/ExtentSpark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MSIL DMC POC Automation Test Suite Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 19, 2023 11:34:03 am</span></a>
+<a href="#"><span class="badge badge-primary">Dec 21, 2023 10:43:13 am</span></a>
 </li>
 </ul>
 </div>
@@ -71,13 +71,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 19, 2023 11:34:03 am</h3>
+<h3>Dec 21, 2023 10:43:13 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 19, 2023 11:36:39 am</h3>
+<h3>Dec 21, 2023 10:46:15 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -148,10 +148,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='98%'><b>49</b> steps passed</small></div>
+<div><small data-tooltip='90%'><b>46</b> steps passed</small></div>
 <div>
-<small data-tooltip='2%'><b>1</b> steps failed,
-<b>0</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='1%'><b>1</b> steps failed,
+<b>4</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -167,7 +167,7 @@
 </div></div>
 <script>
 var timeline = {
-"BS":153.29
+"BS":181.266
 };
 </script>
 <div class="row">
@@ -185,7 +185,7 @@ var timeline = {
 <td>0%</td>
 </tr>
 <tr>
-<td>@BS1</td>
+<td>@BS4</td>
 <td>0</td>
 <td>1</td>
 <td>0</td>
@@ -238,10 +238,10 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 49,
+passGrandChild: 46,
 failGrandChild: 1,
 warningGrandChild: 0,
-skipGrandChild: 0,
+skipGrandChild: 4,
 infoGrandChild: 0,
 eventsCount: 5,
 };
@@ -263,7 +263,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@BS</a><a class="dropdown-item" href="#">@BS1</a>
+<a class="dropdown-item" href="#">@BS</a><a class="dropdown-item" href="#">@BS4</a>
 </ul>
 </li>
 </ul>
@@ -276,7 +276,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">BS</p>
             <p class="text-sm">
-              <span>11:34:06 am</span> / <span>00:02:33:290</span>
+              <span>10:43:14 am</span> / <span>00:03:01:266</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -285,9 +285,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">BS</h5>
-<span class='badge badge-success'>12.19.2023 11:34:06 am</span>
-<span class='badge badge-danger'>12.19.2023 11:36:39 am</span>
-<span class='badge badge-default'>00:02:33:290</span>
+<span class='badge badge-success'>12.21.2023 10:43:14 am</span>
+<span class='badge badge-danger'>12.21.2023 10:46:15 am</span>
+<span class='badge badge-default'>00:03:01:266</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -299,7 +299,7 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>BS 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange</div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>BS 4 :  B2B - IGST - Individual - CCP -  Exchange  - Finance</div>
           <div class="status-avatar float-right mr-4">
             <i class="fa fa-paperclip"></i>
           </div>
@@ -309,7 +309,7 @@ eventsCount: 5,
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>BS 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange</div>
+                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>BS 4 :  B2B - IGST - Individual - CCP -  Exchange  - Finance</div>
                     <div class="status-avatar float-right">
                       <i class="fa fa-paperclip"></i>
                     </div>
@@ -352,7 +352,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User enters OrderId from scenario 8</span>
+                    <span>And User enters OrderId from scenario 10</span>
       <div>
       </div>
                   </div>
@@ -362,7 +362,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User select from displayed orders for scenario 8</span>
+                    <span>And User select from displayed orders for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -377,12 +377,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user enters Bill GSTN field from 8</span>
+                    <span>And user enters Bill GSTN field from 10</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user enters all required fields from 8</span>
+                    <span>And user enters all required fields from 10</span>
       <div>
       </div>
                   </div>
@@ -397,12 +397,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects Owners Manual Preference for scenario 8</span>
+                    <span>And user selects Owners Manual Preference for scenario 10</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects Interested in Loyalty Card, Type of card, Reason for scenario 8</span>
+                    <span>And user selects Interested in Loyalty Card, Type of card, Reason for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -412,12 +412,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects state for scenario 8</span>
+                    <span>And user selects state for scenario 10</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects city for scenario 8</span>
+                    <span>And user selects city for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -427,7 +427,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And selects the dealer for scenario 8 from searched results</span>
+                    <span>And selects the dealer for scenario 10 from searched results</span>
       <div>
       </div>
                   </div>
@@ -437,17 +437,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user selects Extended Warranty for scenario 8</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
                     <span>And User clicks on CCP Sale popup</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And Verify if benefit is already selected or select benefit from 8</span>
+                    <span>And Verify if benefit is already selected or select benefit from 10</span>
       <div>
       </div>
                   </div>
@@ -472,7 +467,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User selects all required fields on financial info for scenario 8</span>
+                    <span>When User selects payment type as "Finance"</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And User selects all required fields on financial info for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -497,7 +497,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User choose Loyalty Card for scenario 8</span>
+                    <span>And User choose Loyalty Card for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -512,7 +512,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And Enter reg Num for "Exchange" for scenario 8</span>
+                    <span>And Enter reg Num for "Exchange" for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -522,12 +522,12 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User choose old vehicle for "Exchange" for scenario 8</span>
+                    <span>And User choose old vehicle for "Exchange" for scenario 10</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And Choose Relation for scenario 8</span>
+                    <span>And Choose Relation for scenario 10</span>
       <div>
       </div>
                   </div>
@@ -537,44 +537,69 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User enters and select other offers for scenario 8</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User enters all required fields on Addtional tab</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "NEXT" button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then Verify user is navigated to "Charge Details"</span>
+                    <span>And User enters Exchange Loyalty bonus for scenario 10</span>
       <div>
       </div>
                   </div>
                   <div class="step fail-bg">
-                    <span>Then Validation on Charge details page</span>
+                    <span>And User enters and select other offers for scenario 10</span>
       <div>
-        <textarea disabled class="code-block">java.lang.AssertionError: expected [1000] but found [0]
-	at org.testng.Assert.fail(Assert.java:110)
-	at org.testng.Assert.failNotEquals(Assert.java:1413)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
-	at org.testng.Assert.assertEquals(Assert.java:131)
-	at org.testng.Assert.assertEquals(Assert.java:655)
-	at org.testng.Assert.assertEquals(Assert.java:665)
-	at com.dms.stepdefinitions.ChargeDetailsStepDef.validation_on_charge_Detail_page(ChargeDetailsStepDef.java:120)
-	at ✽.Validation on Charge details page(file:///C:/Users/sprakash01/ProjectFiles/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/BusinessScenarios.feature:99)
+        <textarea disabled class="code-block">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//div[contains(@class,'table-with-data ng-star-inserted')]/div/div[3]"}
+  (Session info: chrome=120.0.6099.110)
+For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
+Build info: version: '4.8.1', revision: '8ebccac989'
+System info: os.name: 'Windows 11', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.7'
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [b5362180a568db5a99bd1f3bd2283fea, findElement {using=xpath, value=//div[contains(@class,'table-with-data ng-star-inserted')]/div/div[3]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 120.0.6099.110, chrome: {chromedriverVersion: 120.0.6099.109 (3419140ab66..., userDataDir: C:\WINDOWS\SystemTemp\scope...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63640}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:63640/devtoo..., se:cdpVersion: 120.0.6099.110, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: b5362180a568db5a99bd1f3bd2283fea
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:543)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:352)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:344)
+	at com.dms.utils.PageUtil.findBy(PageUtil.java:16)
+	at com.dms.pageobjects.AddInvoice_AdditionalDetailsPOM.chooseFirstRowforMSSFOffer(AddInvoice_AdditionalDetailsPOM.java:182)
+	at com.dms.stepdefinitions.AdditionalDetailsStepDef.user_enter_select_offer(AdditionalDetailsStepDef.java:559)
+	at ✽.User enters and select other offers for scenario 10(file:///C:/Users/tanugupta02/git/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/BusinessScenarios.feature:250)
 </textarea>
       
       </div>
                   </div>
+                  <div class="step skip-bg">
+                    <span>And User enters all required fields on Addtional tab</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>And User clicks on "NEXT" button</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>Then Verify user is navigated to "Charge Details"</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>Then Validation on Charge details page</span>
+      <div>Step skipped
+      </div>
+                  </div>
                   <div class="step pass-bg">
                     <span>com.dms.apphooks.ApplicationHooks.tearDown(io.cucumber.java.Scenario)</span>
-      <div>BS_1_:__B2B_-_IGST_-_Individual_-_CCP_-_Extended_Warranty_- _ Exchange
+      <div>BS_4_:__B2B_-_IGST_-_Individual_-_CCP_-__Exchange__-_Finance
           <div class="row mb-3"><div class="col-md-3">
 <img data-featherlight='../FailedScreenShots/embedded1.png' src="../FailedScreenShots/embedded1.png">
     
@@ -631,11 +656,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:34:06 am</td>
+<td>10:43:14 am</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>BS 1 : B2B - IGST - Individual - CCP - Extended Warranty -   Exchange</a>
+<a href="#" class="linked" test-id='1' id='3'>BS 4 : B2B - IGST - Individual - CCP - Exchange - Finance</a>
 <div class="">
-<span class="badge badge-default">BS.BS 1 : B2B - IGST - Individual - CCP - Extended Warranty -   Exchange</span>
+<span class="badge badge-default">BS.BS 4 : B2B - IGST - Individual - CCP - Exchange - Finance</span>
 </div>
 </td>
 </tr>
@@ -648,12 +673,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">@BS1</p>
+<p class="name">@BS4</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@BS1</h4>
+<h4>@BS4</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -667,11 +692,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:34:06 am</td>
+<td>10:43:14 am</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>BS 1 : B2B - IGST - Individual - CCP - Extended Warranty -   Exchange</a>
+<a href="#" class="linked" test-id='1' id='3'>BS 4 : B2B - IGST - Individual - CCP - Exchange - Finance</a>
 <div class="">
-<span class="badge badge-default">BS.BS 1 : B2B - IGST - Individual - CCP - Extended Warranty -   Exchange</span>
+<span class="badge badge-default">BS.BS 4 : B2B - IGST - Individual - CCP - Exchange - Finance</span>
 </div>
 </td>
 </tr>
@@ -700,12 +725,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">java.lang.AssertionError</p>
+<p class="name">org.openqa.selenium.NoSuchElementException</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>java.lang.AssertionError</h4>
+<h4>org.openqa.selenium.NoSuchElementException</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -719,11 +744,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:36:24 am</td>
+<td>10:44:56 am</td>
 <td>
-<a href="#" class="linked" test-id='1' id='54'>Then Validation on Charge details page</a>
+<a href="#" class="linked" test-id='1' id='51'>And User enters and select other offers for scenario 10</a>
 <div class="">
-<span class="badge badge-default">BS.BS 1 : B2B - IGST - Individual - CCP - Extended Warranty -   Exchange.Then Validation on Charge details page</span>
+<span class="badge badge-default">BS.BS 4 : B2B - IGST - Individual - CCP - Exchange - Finance.And User enters and select other offers for scenario 10</span>
 </div>
 </td>
 </tr>
